--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/cannon": "^4.0.1",
-    "@react-three/drei": "^7.16.4",
     "@react-three/fiber": "^7.0.16",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gsap": "^3.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.4.1",
     "react-three-fiber": "^4.0.12",
+    "stats.js": "^0.17.0",
     "three": "^0.125.0"
   },
   "scripts": {
