--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "typeRoots": [ "./types", "./node_modules/@types"]
   },
   "include": [
     "src"
